--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">A Special Apology</h1>
-    <button id="apologyButton" class="btn-glow">Reveal the Message</button>
+    <h1 class="title">Mein di Maafiiiiii</h1>
+    <button id="apologyButton" class="btn-glow">Click karooo</button>
     <div id="message" class="hidden">
       <p class="animated-message">
         <span class="heart">💖</span>  
